syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "AccountingFixedassetExtraProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// Accommodation Class
message AccommodationClassData {
    option (routines.entity_type) = "AccommodationClass";
    option (routines.keys).keys = "accommodation_class_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: accommodationClassId
    // fields
    string accommodation_class_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string parent_class_id = 2 [(routines.opts).field_type = "id"];
    string description = 3 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message AccommodationClassKey{
    string accommodation_class_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message AccommodationClassList{
    repeated AccommodationClassData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListAccommodationClasses` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Accommodation Map
message AccommodationMapData {
    option (routines.entity_type) = "AccommodationMap";
    option (routines.keys).keys = "accommodation_map_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: accommodationMapId
    // fields
    string accommodation_map_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string accommodation_class_id = 2 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 3 [(routines.opts).field_type = "id"];
    string accommodation_map_type_id = 4 [(routines.opts).field_type = "id"];
    int64 number_of_spaces = 5 [(routines.opts).field_type = "numeric"];
    google.protobuf.Timestamp last_updated_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 7 [(routines.opts).field_type = "date-time"];
            
             

    // extra
    google.protobuf.Struct extra = 12;
    map<string, google.protobuf.Any> attachments = 13;
}


message AccommodationMapKey{
    string accommodation_map_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message AccommodationMapList{
    repeated AccommodationMapData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListAccommodationMaps` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Accommodation Map Type
message AccommodationMapTypeData {
    option (routines.entity_type) = "AccommodationMapType";
    option (routines.keys).keys = "accommodation_map_type_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: accommodationMapTypeId
    // fields
    string accommodation_map_type_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string description = 2 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 3 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
            
             

    // extra
    google.protobuf.Struct extra = 6;
    map<string, google.protobuf.Any> attachments = 7;
}


message AccommodationMapTypeKey{
    string accommodation_map_type_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message AccommodationMapTypeList{
    repeated AccommodationMapTypeData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListAccommodationMapTypes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Fixed Asset Attribute
message FixedAssetAttributeData {
    option (routines.entity_type) = "FixedAssetAttribute";
    option (routines.keys).keys = "fixed_asset_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: fixedAssetId, attrName
    // fields
    string fixed_asset_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
    string attr_value = 3 [(routines.opts).field_type = "value"];
    string attr_description = 4 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message FixedAssetAttributeKey{
    string fixed_asset_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
}

message FixedAssetAttributeList{
    repeated FixedAssetAttributeData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFixedAssetAttributes` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Fixed Asset Identification
message FixedAssetIdentData {
    option (routines.entity_type) = "FixedAssetIdent";
    option (routines.keys).keys = "fixed_asset_id, fixed_asset_ident_type_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: fixedAssetId, fixedAssetIdentTypeId
    // fields
    string fixed_asset_id = 1 [(routines.opts).field_type = "id"];
    string fixed_asset_ident_type_id = 2 [(routines.opts).field_type = "id"];
    string id_value = 3 [(routines.opts).field_type = "long-varchar"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 9;
    map<string, google.protobuf.Any> attachments = 10;
}


message FixedAssetIdentKey{
    string fixed_asset_id = 1 [(routines.opts).field_type = "id"];
    string fixed_asset_ident_type_id = 2 [(routines.opts).field_type = "id"];
}

message FixedAssetIdentList{
    repeated FixedAssetIdentData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFixedAssetIdents` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Fixed Asset Maintenance
message FixedAssetMaintData {
    option (routines.entity_type) = "FixedAssetMaint";
    option (routines.keys).keys = "fixed_asset_id, maint_hist_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: fixedAssetId, maintHistSeqId
    // fields
    string fixed_asset_id = 1 [(routines.opts).field_type = "id"];
    string maint_hist_seq_id = 2 [(routines.opts).field_type = "id"];
    string status_id = 3 [(routines.opts).field_type = "id"];
    string product_maint_type_id = 4 [(routines.opts).field_type = "id"];
    string product_maint_seq_id = 5 [(routines.opts).field_type = "id"];
    string schedule_work_effort_id = 6 [(routines.opts).field_type = "id"];
    routines.FixedPoint interval_quantity = 7 [(routines.opts).field_type = "fixed-point"];
    string interval_uom_id = 8 [(routines.opts).field_type = "id"];
    string interval_meter_type_id = 9 [(routines.opts).field_type = "id"];
    string purchase_order_id = 10 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 11 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 12 [(routines.opts).field_type = "date-time"];
    string id = 13 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 24;
    map<string, google.protobuf.Any> attachments = 25;
}


message FixedAssetMaintKey{
    string fixed_asset_id = 1 [(routines.opts).field_type = "id"];
    string maint_hist_seq_id = 2 [(routines.opts).field_type = "id"];
}

message FixedAssetMaintList{
    repeated FixedAssetMaintData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFixedAssetMaints` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Fixed Asset Maintance And Order
message FixedAssetMaintOrderData {
    option (routines.entity_type) = "FixedAssetMaintOrder";
    option (routines.keys).keys = "fixed_asset_id, maint_hist_seq_id, order_id, order_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: fixedAssetId, maintHistSeqId, orderId, orderItemSeqId
    // fields
    string fixed_asset_id = 1 [(routines.opts).field_type = "id"];
    string maint_hist_seq_id = 2 [(routines.opts).field_type = "id"];
    string order_id = 3 [(routines.opts).field_type = "id"];
    string order_item_seq_id = 4 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 6 [(routines.opts).field_type = "date-time"];
    string id = 7 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 11;
    map<string, google.protobuf.Any> attachments = 12;
}


message FixedAssetMaintOrderKey{
    string fixed_asset_id = 1 [(routines.opts).field_type = "id"];
    string maint_hist_seq_id = 2 [(routines.opts).field_type = "id"];
    string order_id = 3 [(routines.opts).field_type = "id"];
    string order_item_seq_id = 4 [(routines.opts).field_type = "id"];
}

message FixedAssetMaintOrderList{
    repeated FixedAssetMaintOrderData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFixedAssetMaintOrders` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Fixed Asset Type Attribute
message FixedAssetTypeAttrData {
    option (routines.entity_type) = "FixedAssetTypeAttr";
    option (routines.keys).keys = "fixed_asset_type_id, attr_name";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: fixedAssetTypeId, attrName
    // fields
    string fixed_asset_type_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
    string description = 3 [(routines.opts).field_type = "description"];
    google.protobuf.Timestamp last_updated_tx_stamp = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 5 [(routines.opts).field_type = "date-time"];
    string id = 6 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 10;
    map<string, google.protobuf.Any> attachments = 11;
}


message FixedAssetTypeAttrKey{
    string fixed_asset_type_id = 1 [(routines.opts).field_type = "id"];
    string attr_name = 2 [(routines.opts).field_type = "id-long"];
}

message FixedAssetTypeAttrList{
    repeated FixedAssetTypeAttrData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFixedAssetTypeAttrs` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Gl Account Mapping For Fixed Asset Or Fixed Asset Types
message FixedAssetTypeGlAccountData {
    option (routines.entity_type) = "FixedAssetTypeGlAccount";
    option (routines.keys).keys = "fixed_asset_type_id, fixed_asset_id, organization_party_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: fixedAssetTypeId, fixedAssetId, organizationPartyId
    // fields
    string fixed_asset_type_id = 1 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 2 [(routines.opts).field_type = "id"];
    string organization_party_id = 3 [(routines.opts).field_type = "id"];
    string asset_gl_account_id = 4 [(routines.opts).field_type = "id"];
    string acc_dep_gl_account_id = 5 [(routines.opts).field_type = "id"];
    string dep_gl_account_id = 6 [(routines.opts).field_type = "id"];
    string profit_gl_account_id = 7 [(routines.opts).field_type = "id"];
    string loss_gl_account_id = 8 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string id = 11 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 20;
    map<string, google.protobuf.Any> attachments = 21;
}


message FixedAssetTypeGlAccountKey{
    string fixed_asset_type_id = 1 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 2 [(routines.opts).field_type = "id"];
    string organization_party_id = 3 [(routines.opts).field_type = "id"];
}

message FixedAssetTypeGlAccountList{
    repeated FixedAssetTypeGlAccountData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListFixedAssetTypeGlAccounts` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


// Party Fixed Asset Assignment
message PartyFixedAssetAssignmentData {
    option (routines.entity_type) = "PartyFixedAssetAssignment";
    option (routines.keys).keys = "party_id, role_type_id, fixed_asset_id, from_date";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: partyId, roleTypeId, fixedAssetId, fromDate
    // fields
    string party_id = 1 [(routines.opts).field_type = "id"];
    string role_type_id = 2 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp thru_date = 5 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp allocated_date = 6 [(routines.opts).field_type = "date-time"];
    string status_id = 7 [(routines.opts).field_type = "id"];
    string comments = 8 [(routines.opts).field_type = "comment"];
    google.protobuf.Timestamp last_updated_tx_stamp = 9 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 10 [(routines.opts).field_type = "date-time"];
    string id = 11 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 17;
    map<string, google.protobuf.Any> attachments = 18;
}


message PartyFixedAssetAssignmentKey{
    string party_id = 1 [(routines.opts).field_type = "id"];
    string role_type_id = 2 [(routines.opts).field_type = "id"];
    string fixed_asset_id = 3 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp from_date = 4 [(routines.opts).field_type = "date-time"];
}

message PartyFixedAssetAssignmentList{
    repeated PartyFixedAssetAssignmentData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListPartyFixedAssetAssignments` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


